test/invalid/undefined.js
function getUndefined() {}
var x = 3;
x = getUndefined();
